--- a/Loja_Carro_Index.html
+++ b/Loja_Carro_Index.html
@@ -34,8 +34,7 @@
                         <a href="#" class="nav-link">Comprar</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">Vender</a>
+                        <a href="#" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Vender</a>
                         <div class="dropdown-menu">
                             <a href="#" class="dropdown-item">Em Contrustroção</a>
                         </div>
@@ -53,19 +52,17 @@
 
                 <ul class="navbar-nav ml-auto">
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle " type="button" id="dropdownMenuButton"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="btn btn-secondary dropdown-toggle " type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
                             Login
                         </button>
                         <div class="dropdown-menu dropdown-menu-right p-3" aria-labelledby="dropdownMenuButton">
                             <form role="form" class="form FormLogin">
                                 <div class="form-group mb-2">
-                                    <input type="text" class="form-control form-control-sm" placeholder="Email"
-                                        required="">
+                                    <input type="text" class="form-control form-control-sm" placeholder="Email" required="">
                                 </div>
                                 <div class="form-group">
-                                    <input type="text" class="form-control form-control-sm" placeholder="Senha"
-                                        required="">
+                                    <input type="text" class="form-control form-control-sm" placeholder="Senha" required="">
                                 </div>
                                 <div class="form-group text-center mb-2">
                                     <small>
@@ -120,8 +117,7 @@
                 <div class="card filter">
                     <article class="card-group-item">
                         <h5 class="card-header" role="tab" id="nmPreco">
-                            <a data-toggle="collapse" href="#porPreco" aria-expanded="true" aria-controls="porPreco"
-                                class="d-block">
+                            <a data-toggle="collapse" href="#porPreco" aria-expanded="true" aria-controls="porPreco" class="d-block">
                                 <i class="fa fa-chevron-down pull-right"></i> Preço
                             </a>
                         </h5>
@@ -142,8 +138,7 @@
                     </article>
                     <article class="card-group-item">
                         <h5 class="card-header" role="tab" id="nmCatg">
-                            <a class="collapsed d-block" data-toggle="collapse" href="#porCatg" aria-expanded="false"
-                                aria-controls="porCatg">
+                            <a class="collapsed d-block" data-toggle="collapse" href="#porCatg" aria-expanded="false" aria-controls="porCatg">
                                 <i class="fa fa-chevron-down pull-right"></i> Categorias
                             </a>
                         </h5>
@@ -166,47 +161,37 @@
                                         <div class="dropdown-divider"></div>
                                     </li>
                                     <li>
-                                        <a href="#">Categ1
+                                        <a href="#">Suv
                                             <span class="float-right badge badge-light round">Qtd</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">Categ2
+                                        <a href="#">Sports
                                             <span class="float-right badge badge-light round">Qtd</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">Categ3
+                                        <a href="#">Sedan
                                             <span class="float-right badge badge-light round">Qtd</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">Categ4
+                                        <a href="#">4x4
                                             <span class="float-right badge badge-light round">Qtd</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">Categ5
+                                        <a href="#">Cross
                                             <span class="float-right badge badge-light round">Qtd</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">Categ6
+                                        <a href="#">Convertible
                                             <span class="float-right badge badge-light round">Qtd</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#">Categ7
-                                            <span class="float-right badge badge-light round">Qtd</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Categ8
-                                            <span class="float-right badge badge-light round">Qtd</span>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Categ9
+                                        <a href="#">Hatch
                                             <span class="float-right badge badge-light round">Qtd</span>
                                         </a>
                                     </li>
@@ -216,8 +201,7 @@
                     </article>
                     <article class="card-group-item">
                         <h5 class="card-header" role="tab" id="nmMarca">
-                            <a class="collapsed d-block" data-toggle="collapse" href="#porMarca" aria-expanded="false"
-                                aria-controls="porMarca">
+                            <a class="collapsed d-block" data-toggle="collapse" href="#porMarca" aria-expanded="false" aria-controls="porMarca">
                                 <i class="fa fa-chevron-down pull-right"></i> Marcas
                             </a>
                         </h5>
@@ -260,51 +244,67 @@
                 </div>
             </aside>
 
-            <main class="col-sm-9">
-                <article class="card card-product">
-                    <div class="card-body">
-                        <div class="row">
-                            <aside class="col-sm-6">
-                                <div class="img-wrap img-produto">
-                                    <img src="" id="img-Veiculo" class="img-produto">
-                                </div>
-                            </aside>
-                            <article class="col-sm-6">
-                                <h4 class="title">Modelo do Carro</h4>
-                                <p>Descrição do Carro</p>
-                                <div class="action-wrap">
-                                    <div class="price-wrap h4">
-                                        <span class="price"> $100,000,000 </span>
-                                        <!-- <del class="price-old"> $</del> -->
+            <div class="col-sm-9">
+                <div class="">
+                    <article class="card card-product">
+                        <div class="card-body">
+                            <div class="row">
+                                <aside class="col-sm-6">
+                                    <div class="img-wrap img-produto">
+                                        <img src="" id="img-Veiculo1" class="img-produto">
                                     </div>
-                                    <p>
-                                        <a href="#" class="btn btn-primary"> Comprar </a>
-                                        <a href="detalhe_veiculo.html" class="btn btn-secondary"> Detalhes </a>
-                                    </p>
-                                    <a href="#">
-                                        <i class="fas fa-shopping-cart"></i> Adicionar ao Carrinho</a>
-                                </div>
-                            </article>
+                                </aside>
+                                <article class="col-sm-6">
+                                    <h4 class="title">Modelo do Carro</h4>
+                                    <p>Descrição do Carro</p>
+                                    <div class="action-wrap">
+                                        <div class="price-wrap h4">
+                                            <span class="price"> $100,000,000 </span>
+                                            <!-- <del class="price-old"> $</del> -->
+                                        </div>
+                                        <p>
+                                            <a href="#" class="btn btn-primary"> Comprar </a>
+                                            <a href="detalhe_veiculo.html" class="btn btn-secondary"> Detalhes </a>
+                                        </p>
+                                        <a href="#">
+                                            <i class="fas fa-shopping-cart"></i> Adicionar ao Carrinho</a>
+                                    </div>
+                                </article>
+                            </div>
                         </div>
-                    </div>
-                </article>
-            </main>
+                    </article>
+                </div>
+                <div class="">
+                    <article class="card card-product">
+                        <div class="card-body">
+                            <div class="row">
+                                <aside class="col-sm-6">
+                                    <div class="img-wrap img-produto">
+                                        <img src="" id="img-Veiculo2" class="img-produto">
+                                    </div>
+                                </aside>
+                                <article class="col-sm-6">
+                                    <h4 class="title">Modelo do Carro</h4>
+                                    <p>Descrição do Carro</p>
+                                    <div class="action-wrap">
+                                        <div class="price-wrap h4">
+                                            <span class="price"> $100,000,000 </span>
+                                            <!-- <del class="price-old"> $</del> -->
+                                        </div>
+                                        <p>
+                                            <a href="#" class="btn btn-primary"> Comprar </a>
+                                            <a href="detalhe_veiculo.html" class="btn btn-secondary"> Detalhes </a>
+                                        </p>
+                                        <a href="#">
+                                            <i class="fas fa-shopping-cart"></i> Adicionar ao Carrinho</a>
+                                    </div>
+                                </article>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </div>
-        <!-- 
-        <a href="#" class="dropdown-item">Sedan</a>
-        <a href="#" class="dropdown-item">Conversivel</a>
-        <a href="#" class="dropdown-item">Picape</a>
-        <a href="#" class="dropdown-item">Hatchback</a>
-        <a href="#" class="dropdown-item">MiniVan</a>
-        <a href="#" class="dropdown-item">Perua/SW</a>
-        <a href="#" class="dropdown-item">Cupê</a>
-        <a href="#" class="dropdown-item">SUV</a>
-        <a href="#" class="dropdown-item">Utilitário</a>
-        <a href="#" class="dropdown-item">Buggy</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Todos</a>
-        -->
-
     </div>
 
     <!--Modal_EsqueciSenha-->
