alteracoes coxexao com imagens e modal de cadastro

--- a/Loja_Carro_Index.html
+++ b/Loja_Carro_Index.html
@@ -342,19 +342,27 @@
                 <div class="modal-body">
                     <form id="formCadastro">
                         <div class="form-row">
-                            <div class="form-group col-sm-6">
+                            <div class="form-group col-sm-12">
                                 <label for="inputName" class="text-weight-bold">Nome: </label>
                                 <input type="text" class="form-control" id="inputName">
-                            </div>
-                            <div class="form-group col-sm-6">
-                                <label for="inputSobreNome" class="text-weight-bold">Sobrenome: </label>
-                                <input type="text" class="form-control" id="inputSobreNome">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-sm-12">
-                                <label for="inputCPF" class="text-weight-bold">CPF: </label>
-                                <input type="text" class="form-control" id="inputCPF">
+                                <label for="inputEmail" class="text-weight-bold">E-mail: </label>
+                                <input type="text" class="form-control" id="inputEmail">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-sm-12">
+                                <label for="inputSenha" class="text-weight-bold">Senha: </label>
+                                <input type="password" class="form-control" id="inputSenha">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-sm-12">
+                                <label for="inputRepetirSenha" class="text-weight-bold">Repetir Senha: </label>
+                                <input type="password" class="form-control" id="inputRepetirSenha">
                             </div>
                         </div>
                     </form>
