--- a/Loja_Carro_Index.html
+++ b/Loja_Carro_Index.html
@@ -93,13 +93,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100 fSlide" src="" alt="First slide">
+                    <img class="d-block w-100 carSlide0" src="" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 sSlide" src="" alt="Second slide">
+                    <img class="d-block w-100 carSlide1" src="" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100 tSlide" src="" alt="Third slide">
+                    <img class="d-block w-100 carSlide2" src="" alt="Third slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -251,6 +251,35 @@
                             <div class="row">
                                 <aside class="col-sm-6">
                                     <div class="img-wrap img-produto">
+                                        <img src="" id="img-Veiculo0" class="img-produto">
+                                    </div>
+                                </aside>
+                                <article class="col-sm-6">
+                                    <h4 class="title">Modelo do Carro</h4>
+                                    <p>Descrição do Carro</p>
+                                    <div class="action-wrap">
+                                        <div class="price-wrap h4">
+                                            <span class="price"> $100,000,000 </span>
+                                            <!-- <del class="price-old"> $</del> -->
+                                        </div>
+                                        <p>
+                                            <a href="#" class="btn btn-primary"> Comprar </a>
+                                            <a href="detalhe_veiculo.html" class="btn btn-secondary"> Detalhes </a>
+                                        </p>
+                                        <a href="#">
+                                            <i class="fas fa-shopping-cart"></i> Adicionar ao Carrinho</a>
+                                    </div>
+                                </article>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+                <div class="">
+                    <article class="card card-product">
+                        <div class="card-body">
+                            <div class="row">
+                                <aside class="col-sm-6">
+                                    <div class="img-wrap img-produto">
                                         <img src="" id="img-Veiculo1" class="img-produto">
                                     </div>
                                 </aside>
@@ -369,7 +398,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn" data-dismiss="modal" aria-hidden="true">Fechar</button>
-                    <button class="btn btn-primary" id="btnInclusao">Enviar</button>
+                    <button type="submit" class="btn btn-primary" id="btnInclusao">Enviar</button>
                 </div>
             </div>
         </div>
