--- a/Loja_Carro_Index.html
+++ b/Loja_Carro_Index.html
@@ -153,7 +153,7 @@
                             Login
                         </button>
                         <div class="dropdown-menu dropdown-menu-right p-3" aria-labelledby="dropdownMenuButton">
-                            <form role="form" class="form FormLogin">
+                            <form role="form" class="form FormLogin" method="post" action="https://localhost:3000/admin">
                                 <div class="form-group mb-2">
                                     <input id="email" type="text" class="form-control form-control-sm" placeholder="Email"
                                         required="">
@@ -480,19 +480,19 @@
                         <div class="form-row">
                             <div class="form-group col-sm-12">
                                 <label for="inputName" class="text-weight-bold">Nome: </label>
-                                <input type="text" class="form-control" id="inputName">
+                                <input type="text" class="form-control" id="nome">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-sm-12">
                                 <label for="inputEmail" class="text-weight-bold">E-mail: </label>
-                                <input type="text" class="form-control" id="inputEmail">
+                                <input type="text" class="form-control" id="emailCadastro">
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group col-sm-12">
                                 <label for="inputSenha" class="text-weight-bold">Senha: </label>
-                                <input type="password" class="form-control" id="inputSenha">
+                                <input type="password" class="form-control" id="senha">
                             </div>
                         </div>
                         <div class="form-row">
