--- a/Loja_Carro_Index.html
+++ b/Loja_Carro_Index.html
@@ -128,36 +128,11 @@
                                                                 </a>
                                                             </div>                                                           
                                                             <div class="col-sm-12 col-md-6">
-                                                                <button id="msg" class="btn btn-lg btn-block btn-primary">Checkout</button>
+                                                                <button id="checkout" class="btn btn-lg btn-block btn-primary">Checkout</button>
                                                             </div>
                                                         </div>
                                                     </div>                                                    
-                                                </div>
-                                                <div class="col mb-3">
-                                                        <h3>Payment</h3>
-                                                        <label for="fname">Accepted Cards</label>
-                                                        <div class="icon-container">
-                                                          <i class="fa fa-cc-visa" style="color:navy;"></i>                                                             
-                                                          <i class="fa fa-cc-mastercard" style="color:red;"></i>                                                              
-                                                        </div>
-                                                        <label for="cname">Name on Card</label>
-                                                        <input type="text" id="cname" name="cardname" placeholder="John More Doe">
-                                                        <label for="ccnum">Credit card number</label>
-                                                        <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
-                                                        <label for="expmonth">Exp Month</label>
-                                                        <input type="text" id="expmonth" name="expmonth" placeholder="September">
-                                            
-                                                        <div class="row">
-                                                          <div class="col-50">
-                                                            <label for="expyear">Exp Year</label>
-                                                            <input type="text" id="expyear" name="expyear" placeholder="2018">
-                                                          </div>
-                                                          <div class="col-50">
-                                                            <label for="cvv">CVV</label>
-                                                            <input type="text" id="cvv" name="cvv" placeholder="352">
-                                                          </div>
-                                                        </div>  
-                                                </div>                                                
+                                                </div>                                                                                          
                                             </div>                                      
                                     </div>
 
