carrinho com metodos prototipados

--- a/Loja_Carro_Index.html
+++ b/Loja_Carro_Index.html
@@ -77,53 +77,10 @@
                                                     <th> </th>
                                                 </tr>
                                             </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td><img class="shopcar" src="img/audi.png" /> </td>
-                                                    <td>Product Name Dada</td>
-                                                    <td>Em estoque</td>
-                                                    <td>
-                                                        <div class="input-group">
-                                                            <input type="button" value="-" class="button-minus"
-                                                                data-field="quantity">
-                                                            <input type="number" step="1" max="" value="1"
-                                                                name="quantity" class="quantity-field">
-                                                            <input type="button" value="+" class="button-plus"
-                                                                data-field="quantity">
-                                                        </div>
-                                                    </td>
-                                                    <td class="text-right" id="valor">R$ 1000.00</td>
-                                                    <td class="text-right"><button class="btn btn-sm btn-danger"><i
-                                                                class="fa fa-trash"></i> </button> </td>
-                                                </tr>
-                                                <tr>
-                                                    <td><img class="shopcar" src="img/Ferrari.jpg" /> </td>
-                                                    <td>Product Name Toto</td>
-                                                    <td>Em estoque</td>
-                                                    <td>
-                                                        <div class="input-group">
-                                                            <input type="button" value="-" class="button-minus"
-                                                                data-field="quantity">
-                                                            <input type="number" step="1" max="" value="1"
-                                                                name="quantity" class="quantity-field">
-                                                            <input type="button" value="+" class="button-plus"
-                                                                data-field="quantity">
-                                                        </div>
-                                                    </td>
-                                                    <td class="text-right" id="valor">R$ 1000.00</td>
-                                                    <td class="text-right"><button class="btn btn-sm btn-danger"><i
-                                                                class="fa fa-trash"></i></button> </td>
-                                                </tr>
-
-                                                <tr>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td></td>
-                                                    <td><strong>Total</strong></td>
-                                                    <td class="valor-total"><strong>R$</strong></td>
-                                                </tr>
+                                            <tbody id="corpoTabela">
                                             </tbody>
+                                            <tfoot id="rodapeTabela">
+                                            </tfoot>
                                         </table>
 
                                     </div>
