--- a/Loja_Carro_Index.html
+++ b/Loja_Carro_Index.html
@@ -298,8 +298,8 @@
                 </div>
             </aside>
 
-            <div class="col-sm-9">
-                <div class="">
+            <div id="conteudoLoja" class="col-sm-9">
+                <!-- <div class="">
                     <article class="card card-product">
                         <div class="card-body">
                             <div class="row">
@@ -314,10 +314,9 @@
                                     <div class="action-wrap">
                                         <div class="price-wrap h4">
                                             <span class="price"> $100,000,000 </span>
-                                            <!-- <del class="price-old"> $</del> -->
                                         </div>
                                         <p>
-                                            <a href="#" class="btn btn-primary"> Comprar </a>
+                                            <a href="#" name="comprar" class="btn btn-primary"> Comprar </a>
                                             <a href="detalhe_veiculo.html" class="btn btn-secondary"> Detalhes </a>
                                         </p>
                                         <a href="#">
@@ -343,10 +342,9 @@
                                     <div class="action-wrap">
                                         <div class="price-wrap h4">
                                             <span class="price"> $100,000,000 </span>
-                                            <!-- <del class="price-old"> $</del> -->
                                         </div>
                                         <p>
-                                            <a href="#" class="btn btn-primary"> Comprar </a>
+                                            <a href="#" name="comprar" class="btn btn-primary"> Comprar </a>
                                             <a href="detalhe_veiculo.html" class="btn btn-secondary"> Detalhes </a>
                                         </p>
                                         <a href="#">
@@ -372,10 +370,9 @@
                                     <div class="action-wrap">
                                         <div class="price-wrap h4">
                                             <span class="price"> $100,000,000 </span>
-                                            <!-- <del class="price-old"> $</del> -->
                                         </div>
                                         <p>
-                                            <a href="#" class="btn btn-primary"> Comprar </a>
+                                            <a href="#" name="comprar" class="btn btn-primary"> Comprar </a>
                                             <a href="detalhe_veiculo.html" class="btn btn-secondary"> Detalhes </a>
                                         </p>
                                         <a href="#">
@@ -385,7 +382,7 @@
                             </div>
                         </div>
                     </article>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
